ft(comment): Complete endpoint for user to delete comment
