# src/routes/comment.js
@@ -7,6 +7,6 @@ const router = Router();
 
 router.post('/comment/trips', authenticateUser, requestValidation.comment, CommentController.createTripRequestComment);
 router.put('/comment/trips/:commentUuid', authenticateUser, requestValidation.comment, CommentController.editTripRequestComment);
-
+router.delete('/comment/trips/:uuid', authenticateUser, CommentController.delete);
 
 export default router;
